syntax = "proto3";

                 package mobilePaymentProvider;
service MobilePaymentProviderService {
 rpc createMobilePaymentProvider (MobilePaymentProviderCreateInput) returns (MobilePaymentProvider) {}
rpc mobilePaymentProviders (findManyParams) returns (stream MobilePaymentProvider) {}
rpc mobilePaymentProvider (MobilePaymentProviderWhereUniqueInput) returns (MobilePaymentProvider) {}
rpc updateMobilePaymentProvider (MobilePaymentProviderUpdateInput) returns (MobilePaymentProvider) {}
rpc deleteMobilePaymentProvider (MobilePaymentProviderWhereUniqueInput) returns (MobilePaymentProvider) {}
rpc findManyMobilePaymentProviders (MobilePaymentProviderWhereUniqueInput) returns (stream Payment) {}
rpc updateMobilePaymentProviders (PaymentParams) returns (stream Payment) {}
rpc connectMobilePaymentProviders (PaymentParams) returns (Payment) {}
rpc disconnectMobilePaymentProviders (PaymentParams) returns (Payment) {} 
 }
message MobilePaymentProviderCreateInput {
string apiKey = 1;
string apiSecret = 2;
string createdAt = 3;
string id = 4;
bool isActive = 5;
string name = 6;
repeated Payment payments = 7;
string updatedAt = 8;
};
message MobilePaymentProvider {
string apiKey = 1;
string apiSecret = 2;
string createdAt = 3;
string id = 4;
bool isActive = 5;
string name = 6;
repeated Payment payments = 7;
string updatedAt = 8;
};
message MobilePaymentProviderWhereUniqueInput {
string apiKey = 1;
string apiSecret = 2;
string createdAt = 3;
string id = 4;
bool isActive = 5;
string name = 6;
repeated Payment payments = 7;
string updatedAt = 8;
};
message MobilePaymentProviderUpdateInput {
string apiKey = 1;
string apiSecret = 2;
string createdAt = 3;
string id = 4;
bool isActive = 5;
string name = 6;
repeated Payment payments = 7;
string updatedAt = 8;
};
message findManyParams {

};
message Payment {
int32 amount = 1;
int32 amountByCard = 2;
int32 amountByCash = 3;
bool completed = 4;
string completedAt = 5;
string createdAt = 6;
int32 discountAmount = 7;
string id = 8;
bool isPartial = 9;
string name = 10;
string orderId = 11;
repeated string payment_method = 12;
repeated string status = 13;
int32 tax = 14;
string updatedAt = 15;
};
message PaymentWhereUniqueInput {
int32 amount = 1;
int32 amountByCard = 2;
int32 amountByCash = 3;
bool completed = 4;
string completedAt = 5;
string createdAt = 6;
int32 discountAmount = 7;
string id = 8;
bool isPartial = 9;
string name = 10;
string orderId = 11;
repeated string payment_method = 12;
repeated string status = 13;
int32 tax = 14;
string updatedAt = 15;
};
message PaymentParams {
MobilePaymentProviderWhereUniqueInput mobilePaymentProviderWhereUniqueInput = 1;
PaymentWhereUniqueInput paymentWhereUniqueInput = 2;
};